# quote-extractor

./: .gitignore  CLAUDE.md  README.md  ai_analyzer.py  config.json  csv_writer.py  demo.py  main.py  pdf_reader.py  pyproject.toml  sheets_reader.py  web_searcher.py  실행.bat
